// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterByDropdown.vue > disabled prop 1`] = `
"<div class="inline-block" data-id="sds-filter-by-dropdown">
  <div class="inline-block w-full"><button data-id="sds-action-button" type="button" class="action-btn action-btn-ghost action-btn-gray action-btn-sm disabled" disabled="" aria-disabled="true" id="v-0" aria-haspopup="true" aria-expanded="false">
      <!-- @slot ActionButton content. -->
      <!-- @slot Title content of trigger button. --><span>Filter</span><svg class="inline-block self-center w-5 h-5 -mr-1 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
      </svg>
    </button></div>
  <!---->
</div>"
`;

exports[`FilterByDropdown.vue > matches snapshot with no props assigned 1`] = `
"<div class="inline-block" data-id="sds-filter-by-dropdown">
  <div class="inline-block w-full"><button data-id="sds-action-button" type="button" class="action-btn action-btn-ghost action-btn-gray action-btn-sm" aria-disabled="false" id="v-0" aria-haspopup="true" aria-expanded="false">
      <!-- @slot ActionButton content. -->
      <!-- @slot Title content of trigger button. --><span>Filter</span><svg class="inline-block self-center w-5 h-5 -mr-1 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
      </svg>
    </button></div>
  <!---->
</div>"
`;
